src/objects/Service_Notification__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <description>Text shown as message body.</description>
        <label>Body</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <description>Text shown as message header.</description>
        <label>Header</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Portal_Applications__c</referenceTo>
        <relationshipLabel>Service Notifications</relationshipLabel>
        <relationshipName>Service_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <description>Specifies start date of message validity.</description>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Specifies end date of message validity.</description>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Service Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Header__c</columns>
        <columns>Body__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>